# twamp_lite

./: .gitignore  CMakeLists.txt  CMakeLists_ExternalProjects.txt  README.md  client.c  server.c  twamp_alloc.c  twamp_alloc.h  twamp_common_datatypes.h  twamp_lite_unauthenticated.c  twamp_lite_unauthenticated.h  twamp_network.h  twamp_utils.c  twamp_utils.h
